test/compile_errors/binary_schema_incompatible_tdisp.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "LABEL", .tform = "8A", .tdisp = "F8.2" },
    });
}
